maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:16: error: expected class or object definition
def keepHandOnWallSide(){
^